Fixed invisible stripe button in minicart dropdown

--- a/web/css/layout/_minicart.less
+++ b/web/css/layout/_minicart.less
@@ -188,6 +188,7 @@
                 ~ div:not(:empty) {
                     margin-top: @2;
                     display: flex;
+                    flex-direction: column;
                     gap: @2;
                 }
             }
